add demonstration for wangdandong/spring-social-wechat

--- a/attic/spring-social-showcase-sec/build.gradle
+++ b/attic/spring-social-showcase-sec/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	compile "org.springframework.social:spring-social-facebook-web:$springSocialFacebookVersion"
 	compile "org.springframework.social:spring-social-twitter:$springSocialTwitterVersion"
 	compile "org.springframework.social:spring-social-linkedin:$springSocialLinkedInVersion"
+	compile "org.springframework.social:spring-social-wechat:$springSocialWechatVersion"
     compile("org.thymeleaf:thymeleaf-spring4:$thymeleafVersion")
     compile("nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:$thymeleafLayoutVersion")
 
