--- a/attic/spring-social-showcase-sec/gradle.properties
+++ b/attic/spring-social-showcase-sec/gradle.properties
@@ -12,6 +12,7 @@ springSocialVersion = 1.1.1.BUILD-SNAPSHOT
 springSocialFacebookVersion = 2.0.0.RELEASE
 springSocialTwitterVersion = 1.1.0.RELEASE
 springSocialLinkedInVersion = 1.0.0.RELEASE
+springSocialWechatVersion = 1.0.0.BUILD-SNAPSHOT
 springVersion = 4.0.3.RELEASE
 thymeleafVersion = 2.1.2.RELEASE
 thymeleafLayoutVersion = 1.2.2
