--- a/attic/spring-social-showcase-sec/src/main/resources/application.properties
+++ b/attic/spring-social-showcase-sec/src/main/resources/application.properties
@@ -5,3 +5,5 @@ twitter.appKey={{SEE README}}
 twitter.appSecret={{SEE README}}
 linkedin.appKey={{SEE README}}
 linkedin.appSecret={{SEE README}}
+wechat.appKey=wx55142fa74fd2e796
+wechat.appSecret=2cf1b45b7d19d80d36b808867c62e074
